# cyantize

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  apache-mime.types.txt  apache_to_json.py  compose.yml  cyantize.toml  mime.conflicts.toml  mime.types.toml  pyproject.toml  requirements.md
cyantize/: __main__.py  config.py  consts.py  cyantize.toml  file_type_scan.py  license.py  main.py  mime.types.txt  shared.py
scripts/: license-gen.py
src/: config.py  consts.py  file_type_scan.py  filetype.py  log.py  main.py  shared.py
src/cyantize/: consts.py  file_type_scan.py  main.py
test/: conftest.py  consts.py  test_filetype.py  test_license.py
test/resource/: file-sample_100kB.correct.doc  file-sample_100kB.correct.docx  file-sample_100kB.correct.odt  file-sample_100kB.correct.rtf  file_example.correct.html  file_example_JSON_1kb.correct.json  file_example_ODP_200kB.correct.odp  file_example_ODS_10.correct.ods  file_example_XML_24kb.correct.xml
