[tool.poetry]
name = "cyantize"
version = "0.1.0"
description = ""
authors = ["Eyal Abramovitch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
toml = "^0.10.2"
pydantic = "^2.9.2"
python-json-logger = "^2.0.7"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
