[tool.poetry]
name = "cyantize"
version = "0.1.0"
description = ""
authors = ["Cyantize"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.7"
toml = "^0.10.2"
pydantic = "^2.9.2"
python-json-logger = "^2.0.7"
pytest = "^8.3.3"
pytest-benchmark = "^4.0.0"
cryptography = "^43.0.1"
pip = "^24.2"
magika = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cyantize = "cyantize.main:main"

[tool.ruff]
line-length = 140
